css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
*{
    padding: 0;
    margin: 0;
}

::selection{
    background: #d8d8d8;
    color: rgb(207, 182, 41);
}

.fancy-btn{
    --bs-btn-color: #01BAEF!important;
    --bs-btn-border-color: #01BAEF!important;
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #01BAEF!important;
    --bs-btn-hover-border-color: #757780;
    --bs-btn-focus-shadow-rgb: 108,117,125;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: #757780;
    --bs-btn-active-border-color: #757780;
    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    --bs-btn-disabled-color: #757780;
    --bs-btn-disabled-bg: transparent;
    --bs-btn-disabled-border-color: #757780;
    --bs-gradient: none;
      border: var(--bs-btn-border-width) solid #757780!important; 
      font-weight: bolder!important;
}

body{
    font-family: 'Montserrat', sans-serif!important;
    margin: 10px!important;
}

header{
    padding-bottom: 100px;
    margin-bottom: 10px;
    height: 98vh;
}

.main-background{
    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(../resources/header.jpg);
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
}

.main-img:hover{
    animation-name: Rotate;
    animation-duration: 1s;
    animation-iteration-count: 1;
    animation-timing-function: linear;
}

.navbar-toggler-icon{
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255,255,255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")!important;
    width: 2em!important;
    height: 2em!important;
}

.navbar-toggler:focus{
    box-shadow: none!important;
}

.nav-link{
    text-decoration: none;
    color: #fff!important;
    font-weight: 500;
    font-size: calc(0.20em + 1.5vmin)!important;
}

.nav-link::after{
    content:'';
    height:2px;
    width: 0%;
    background-color: #800080;
    display: block;
    transition: .5s ease-in-out;
}
  
.nav-link:hover::after {
    content: '';
    height: 2px;
    width: 100%;
    background-color: #ffc0cb;
    display: block;
}

.centerpiece{
    position: absolute!important;
    top: 50%;
    right: 50%;
    transform: translate(50%, -60%);
    border-radius: 50%;
    border: 3px solid #fff;
    width: 300px;
    height: 300px;
    min-height: 250px;
    min-width: 250px;
    margin: 0 auto;
}

.text-container{
    color:#fff!important;
    margin: 0 auto;
    width: 100%;
}

.centerpiece-text{
    font-size: calc(2em + 1.5vmin);
    font-weight: 100;
    margin: 0;
}

.main-title{
    font-size: calc(.45em + 1.5vmin);
}

.t1, .t2, .t3{
    transition: all 20s ease;
}

header:hover .centerpiece .t1{
    color: #ffd700;
    transition: all 1s ease;
}

header:hover .centerpiece .t2{
    color: #f13a59;
    transition: all 2s ease;
}

header:hover .centerpiece .t3{
    color: #01BAEF;
    transition: all 3s ease;
}

/* SECTIONS */
.section{
    padding: 3rem 0;
}

.section-heading{
    font-size: 3rem;
    line-height: 2.5rem;
}

.portfolio-heading{
    color: #01BAEF;
    border-bottom: 8px solid #ffd700;
    display: inline-block;
}

.portfolio-img{
    width: 100%;
    height: 250px;
    object-fit: cover;
}

/* Modal */
.btn-close{
    font-size: 1.5rem!important;
    padding: 1rem!important;
    background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2301BAEF'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat!important;
}

/* about */
.about-heading{
    color: #fff;
    border-bottom: 8px solid #ffd700;
    display: inline-block;
}

.about-title{
    color:#01BAEF;
}

.highlight{
    color: rgb(207, 182, 41);
    font-weight: bolder;
}

.about-info .info{
    color: #fff;
    font-size: 20px;
    line-height: 32px;
    margin: 1em 0;
    font-weight:500;
}


/* contact/footer */
.contact-section{
    margin-top: 10px!important;
    padding: 1.5rem 0!important;
}

#contact a > i{
    color: #fff;
    font-size: 40px;
    margin: 0 20px;
}

#contact a:hover i{
    font-size: 45px;    
}

@media(max-width:340px){
    header {
        padding-bottom: 50px!important;
    }

    .section{
        padding: 1.5rem 0;
    }

    .section-heading {
        font-size: 2rem;
        line-height: 2rem;
    }

    .col-12.my-4 {
        margin-top: 1rem!important;
        margin-bottom: 1rem!important;
    }

    .container.my-5{
        margin-top: 1rem!important;
        margin-bottom: 1rem!important;
    }

    .container-fluid.mx-1{
        margin: 0 0!important;
        padding: 0 6px!important;
    }

    .main-img{
        width: 65px!important;
    }

    .centerpiece{
        width: 250px;
        height: 250px;
    }

    .centerpiece-text {
        font-size: calc(1.5em + 1.5vmin);
        font-weight: 100;
        margin: 0;
    }

    .main-title {
        font-size: calc(.45em + 1.5vmin);
    }

    .navbar-toggler-icon {
        width: 1.5em!important;
        height: 1.5em!important;
    }

    .about-title{
        font-size: calc(1rem + 1.5vw)!important;
    }

    .info{
        font-size: 15px!important;
        line-height: 20px!important;
    }
}

@media(min-width: 600px){
    .centerpiece{
        width: 350px!important;
        height: 350px!important;
    }
}

@media(min-width:1200px){
    .nav-link{
        font-size: calc(0.3em + 1.5vmin)!important;
    }
}

@media(min-width: 1600px){
    .nav-link{
        font-size: calc(0.2em + 1.5vmin)!important;
    }
    .centerpiece{
        width: 500px!important;
        height: 500px!important;
        margin: 50px auto!important;
    }
    .text-container {
        margin-bottom: 20px!important;
    }
    .centerpiece-text{
        font-size: calc(2.9em + 1.5vmin);
    }
    .main-title{
        font-size: calc(.55em + 1.5vmin)!important;
    }    
}

@media (min-width: 750px) and (max-width: 1600px)  {
    .main-title{
        font-size: calc(.3em + 1.5vmin)!important;
    }   
}

@media(max-width: 992px){
    .navbar-nav{
        display: inline-block!important;
    }
    .nav-link{
        font-size: calc(0.55em + 1.5vmin)!important;
    }
    .nav-link{
        margin: 0!important;
        padding: 0px!important;
    }
}

@keyframes Rotate{
    from{-webkit-transform:rotate(0deg);}
    to{-webkit-transform:rotate(360deg);}
}

